fix: dashboard manager operations