@@ -7,14 +7,14 @@ import sptech.school.v2.cleanarch.core.dtos.internal.dashboard.ChartPieDTO;
 import sptech.school.v2.cleanarch.core.dtos.internal.dashboard.teacher.TeacherStatsDTO;
 import sptech.school.v2.cleanarch.core.dtos.internal.dashboard.teacher.TeacherTableDTO;
 import sptech.school.v2.cleanarch.core.dtos.out.dashboard.teacher.TeacherDashResponseDTO;
+import sptech.school.v2.cleanarch.domain.entities.Teacher;
+import sptech.school.v2.cleanarch.domain.enumerated.Subject;
 import sptech.school.v2.cleanarch.infra.persistence.repository.dashboard.teacher.TeacherDashJpaRepository;
 import sptech.school.v2.cleanarch.infra.persistence.repository.dashboard.teacher.projections.HoursByTeacher;
-import sptech.school.v2.cleanarch.infra.persistence.repository.dashboard.teacher.projections.TeacherBasicProjection;
 
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Component
 public class TeacherDashQueryJpaAdapter implements TeacherDashQueryGateway {
@@ -27,11 +27,11 @@ public class TeacherDashQueryJpaAdapter implements TeacherDashQueryGateway {
 
     @Override
     public TeacherDashResponseDTO getTeacherDashData(LocalDateTime start, LocalDateTime end) {
-        List<TeacherBasicProjection> teachers = repository.findAllBasic();
+        List<Teacher> teachers = repository.findAllBasic();
         int totalTeachers = teachers.size();
 
-        List<TeacherBasicProjection> activeTeachers = teachers.stream()
-                .filter(t -> Boolean.FALSE.equals(t.getDeleted()))
+        List<Teacher> activeTeachers = teachers.stream()
+                .filter(t -> !t.isDeleted())
                 .toList();
         int totalActive = activeTeachers.size();
 
@@ -50,7 +50,7 @@ public class TeacherDashQueryJpaAdapter implements TeacherDashQueryGateway {
 
         double totalHourlyRateActive = activeTeachers.stream()
                 .filter(t -> t.getHourlyRate() != null)
-                .mapToDouble(TeacherBasicProjection::getHourlyRate)
+                .mapToDouble(Teacher::getHourlyRate)
                 .sum();
         double averageHourlyRateActive = totalActive == 0 ? 0.0 : totalHourlyRateActive / totalActive;
 
@@ -75,15 +75,8 @@ public class TeacherDashQueryJpaAdapter implements TeacherDashQueryGateway {
                 .collect(Collectors.toList());
 
         Map<String, Long> countBySubject = teachers.stream()
-                .flatMap(t -> {
-                    String subjectString = t.getSubjects();
-                    if (subjectString == null || subjectString.trim().isEmpty()) {
-                        return Stream.empty();
-                    }
-                    return Arrays.stream(subjectString.split(","))
-                            .map(String::trim);
-                })
-                .filter(s -> !s.isEmpty())
+                .flatMap(t -> Optional.ofNullable(t.getSubjects()).orElse(List.of()).stream())
+                .map(Subject::name)
                 .collect(Collectors.groupingBy(s -> s, Collectors.counting()));
 
         List<ChartPieDTO> disciplineDistribution = countBySubject.entrySet().stream()
@@ -93,10 +86,14 @@ public class TeacherDashQueryJpaAdapter implements TeacherDashQueryGateway {
         List<TeacherTableDTO> table = teachers.stream()
                 .map(t -> {
                     String name = t.getName();
-                    String subject = t.getSubjects() == null || t.getSubjects().trim().isEmpty() ? "—" : t.getSubjects();
+                    String subject = Optional.ofNullable(t.getSubjects()).orElse(List.of())
+                            .stream()
+                            .map(Subject::name)
+                            .collect(Collectors.joining(","));
+                    if (subject.isBlank()) subject = "—";
                     Double hoursWorked = hoursPerTeacher.getOrDefault(t.getId(), 0.0);
                     String hourlyRate = t.getHourlyRate() != null ? String.format("R$ %.2f", t.getHourlyRate()) : "—";
-                    String status = Boolean.TRUE.equals(t.getDeleted()) ? "Inactive" : "Active";
+                    String status = t.isDeleted() ? "Inactive" : "Active";
                     return new TeacherTableDTO(name, subject, hoursWorked, hourlyRate, status);
                 })
                 .collect(Collectors.toList());
